--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="images/heart.png"/>
     <title>Aiyana's Lifestyle</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9HHFNMKGPH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9HHFNMKGPH');
+</script>
   </head>
   <body>
     <a class = "skip" href="#daytoday">Skip to Main Content</a>
