--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aiyana</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9HHFNMKGPH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9HHFNMKGPH');
+</script>
+
   </head>
   <body>
     
