--- a/food.html
+++ b/food.html
@@ -60,8 +60,9 @@
 
 <!-- JavaScript user Input -->
 
+
 <h3>Click the button below to enter your favorite Ann Arbor food or restaurant! </h3>
-<button onclick="myFunction()">Click Here</button>
+<div class="button"> <button onclick="myFunction()">Click Here</button> </div>
 <p id="foodinput"></p>
 <script>
 function myFunction() {
@@ -72,6 +73,7 @@ function myFunction() {
   }
 }
 </script>
+
 
 <footer>
     
