--- a/hobbies.html
+++ b/hobbies.html
@@ -91,7 +91,7 @@
     <a id="triathlons"></a>
     <h2>Triathlons & 5k's </h2>
     <p> This past summer, I decided to focus more on my fitness and combine my passion for running, biking and swimming by completing a triathlon and I recently ran my first 5k over Thanksgiving Break! <br> Hover over each image to learn more about the race and see my times. </p>
-    <div class="flip-card">
+    <div class="flip-card" tabindex="0">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/5k.jpg" alt="Avatar" style="width:300px;height:300px;">
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="flip-card">
+    <div class="flip-card" tabindex="0">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/triathlons.JPEG" alt="Avatar" style="width:300px;height:300px;">
